(library
 (kind ppx_rewriter)
 (libraries ppxlib re metaquot ppx-k-expect.kernel)
 (preprocess (pps metaquot.ppx))
 (public_name ppx-k-expect)
 (modules ppx_k_expect)
 (name ppx_k_expect))

(library
 (libraries re unix)
 (public_name ppx-k-expect.kernel)
 (modules ppx_k_expect__kernel)
 (name ppx_k_expect__kernel))
